# syn

./: .gitignore  Cargo.toml  README.md  macroforge_ts_syn
.github/workflows/: ci.yml
src/: config.rs  derive.rs  errors.rs  import_registry.rs  jsdoc.rs  lib.rs  lower.rs  lower_oxc.rs  oxc_compat.rs  oxc_quote_helpers.rs  parse.rs  quote_helpers.rs  stream.rs
src/abi/: helpers.rs  mod.rs  patch.rs  span.rs
src/abi/ir/: class.rs  context.rs  decorators.rs  enum_.rs  interface.rs  mod.rs  type_alias.rs  type_registry.rs
