[package]
name = "macroforge_ts_syn"
description = "TypeScript syntax types for compile-time macro code generation"
version = "0.1.42"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/macroforge-ts/syn"
homepage = "https://github.com/macroforge-ts/syn"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[features]
default = ["swc"]
swc = ["dep:swc_core"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

swc_core = { version = "51.0.0", optional = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_quote",
  "ecma_codegen",
] }

thiserror = "1"
