[package]
name = "macroforge_ts_syn"
description = "TypeScript syntax types for compile-time macro code generation"
version = "0.1.80"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/macroforge-ts/syn"
homepage = "https://github.com/macroforge-ts/syn"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[features]
default = ["oxc"]
swc = ["dep:swc_core"]
oxc = ["dep:oxc_allocator", "dep:oxc_ast", "dep:oxc_parser", "dep:oxc_span", "dep:oxc_codegen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

swc_core = { version = "59.0.1", optional = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_quote",
  "ecma_codegen",
] }

oxc_allocator = { version = "0.53", optional = true }
oxc_ast = { version = "0.53", optional = true }
oxc_parser = { version = "0.53", optional = true }
oxc_span = { version = "0.53", optional = true }
oxc_codegen = { version = "0.53", optional = true }

thiserror = "2.0.17"
indexmap = { version = "2.7", features = ["serde"] }